# SoundFlow

./: README.md  SoundFlow.sln
.github/workflows/: build-ffmpeg.yml  build-publish-ymds.yml
Codecs/SoundFlow.Codecs.FFMpeg/: FFmpegDecoder.cs  README.md  SoundFlow.Codecs.FFMpeg.csproj
Codecs/SoundFlow.Codecs.FFMpeg/Native/: FFmpeg.cs
Codecs/SoundFlow.Codecs.FFMpeg/runtimes/ios-arm64/native/soundflow-ffmpeg.framework/: soundflow-ffmpeg
Codecs/SoundFlow.Codecs.FFMpeg/runtimes/osx-arm64/native/: libsoundflow-ffmpeg.dylib
Codecs/SoundFlow.Codecs.FFMpeg/runtimes/osx-x64/native/: libsoundflow-ffmpeg.dylib
Extensions/SoundFlow.Extensions.WebRtc.Apm/: SoundFlow.Extensions.WebRtc.Apm.csproj
Midi/SoundFlow.Midi.PortMidi/: SoundFlow.Midi.PortMidi.csproj
Native/: CMakeLists.txt  index.html  library.cpp  library.h
Native/ffmpeg-codec/: soundflow-ffmpeg.c  soundflow-ffmpeg.h
Native/miniaudio-backend/: CMakeLists.txt
Native/miniaudio-backend/build-wasm/: build.ps1
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/: SoundFlow.Samples.AvaloniaCrossPlatform.sln
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform/: SoundFlow.Samples.AvaloniaCrossPlatform.csproj
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform.Browser/: Program.cs  SoundFlow.Samples.AvaloniaCrossPlatform.Browser.csproj
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform.Browser/wwwroot/: bootstrapper.js  index.html  library.js  library.wasm
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform.Desktop/: SoundFlow.Samples.AvaloniaCrossPlatform.Desktop.csproj
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform/Converters/: BoolToPlayPauseConverter.cs
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform/ViewModels/: MainViewModel.cs
Samples/SoundFlow.Samples.AvaloniaCrossPlatform/SoundFlow.Samples.AvaloniaCrossPlatform/Views/: MainView.axaml  MainView.axaml.cs
Samples/SoundFlow.SimplePlayer/: ComponentTests.cs  Program.cs
Src/: SoundFlow.csproj  SoundFlow.targets
Src/Abstracts/: AudioEngine.cs  SoundComponent.cs
Src/Abstracts/Devices/: AudioPlaybackDevice.cs
Src/Backends/MiniAudio/: MiniAudioDecoder.cs  MiniAudioEngine.cs  Native.Standalone.cs  Native.Web.cs  Native.cs
Src/Backends/MiniAudio/Devices/: MiniAudioDevice.cs
Src/Backends/MiniAudio/runtimes/iOS-arm64/native/miniaudio.framework/: miniaudio
Src/Backends/MiniAudio/runtimes/osx-arm64/native/: libminiaudio.dylib
Src/Backends/MiniAudio/runtimes/osx-x64/native/: libminiaudio.dylib
Src/Components/: Recorder.cs  SoundPlayer.cs  SurroundPlayer.cs  WsolaTimeStretcher.cs
Src/Editing/: CompositionRenderer.cs
Src/Editing/Persistence/: CompositionProjectManager.cs
Src/Interfaces/: ISoundDataProvider.cs  ISoundDecoder.cs
Src/Modifiers/: AlgorithmicReverbModifier.cs  ChorusModifier.cs  DelayModifier.cs  ParametricEqualizer.cs
Src/Providers/: AssetDataProvider.cs  ChunkedDataProvider.cs  MicrophoneDataProvider.cs  NetworkDataProvider.cs  QueueDataProvider.cs  RawDataProvider.cs  StreamDataProvider.cs
Src/Security/: AudioEncryptor.cs  FileAuthenticator.cs
Src/Security/Configuration/: SignatureConfiguration.cs
Src/Security/Modifiers/: StreamEncryptionModifier.cs
Src/Security/Utils/: SignatureKeyGenerator.cs
Test/: Program.cs  Test.csproj
